gccida/g1/gen_split_956
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_956/src/insn-emit.c:8700:30: error: use of undeclared identifier 'machine_mode'
operands[1] = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), operands[1]); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_956/src/insn-emit.c:8701:21: error: use of undeclared identifier 'machine_mode'
v1 = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), operands[3]); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_956/src/insn-emit.c:8703:30: error: use of undeclared identifier 'machine_mode'
v2 = gen_rtx_fmt_ee( MULT, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), operands[1], operands[2]); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_956/src/insn-emit.c:8704:30: error: use of undeclared identifier 'machine_mode'
v3 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v2, v1); 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_956/src/obj/insn-emit.o] Error 1
